Fix movements on mobile and UI improvement

--- a/css/snake.css
+++ b/css/snake.css
@@ -70,10 +70,10 @@ canvas {
         height: 50%;
     }
 
-    #btnNewGame{
+    /* #btnNewGame{
         width: 100px;
         height: 100px;
-    }
+    } */
 }
 
 .btn-controllers{
